--- a/views/system/table-of-spells.jade
+++ b/views/system/table-of-spells.jade
@@ -119,4 +119,7 @@ html(lang="de")
 									td= __variant.cast.AsP
 									td= __variant.cast.WD
 									td= __variant.cast.RW
-									
+		section
+			a(href="/zauber/neu") neuer Zauber
+			br
+			a(href="/variante/neu") neue Variante
