--- a/views/system/edit-variant.jade
+++ b/views/system/edit-variant.jade
@@ -35,6 +35,7 @@ html(lang="de")
 		h1 Zaubervariante:
 		form#nesp(action="/zauber/"+_Zauber._id+"/variante/"+_Variante._id, method="post", accept-charset="utf-8")
 			input(type="hidden", name="_method", value="put")
+			input(type="hidden", name="_id", value=_Variante._id)
 			fieldset
 				div
 					label Variante des
