--- a/views/magie.jade
+++ b/views/magie.jade
@@ -125,66 +125,68 @@ html(lang="de")
 					tr
 						each val in ["MU", "KL", "IN", "CH", "FF", "GE", "KO", "KK"]
 							td= Attribute[val].wert
-		section
-			a#spr
-			table.data-section.eigenschaften.mitte.zauber
-				caption Zaubersprüche
-				colgroup
-					col
-					col(style="width: 9em;")
-					col(style="width: 4.5em;", span="2")
-					col(style="width: 10em;", span="4")
-				thead
-					tr
-						th Zauber
-						th Probe
-						th ZfW
-						th Mod.
-						th ZD
-						th AsP
-						th WD
-						th RW
-					tr
-						th Spezialisierungen
-						th(colspan="3") Spontane Mod.
-						th Merkmale
-						th Ziel
-						th Repräsentation
-						th Komplexität
-				each __spell in Magie.Zauber
-					tbody.hide-rows
+		
+		if Array.isArray(Magie.Zauber) && Magie.Zauber.length > 0
+			section
+				a#spr
+				table.data-section.eigenschaften.mitte.zauber
+					caption Zaubersprüche
+					colgroup
+						col
+						col(style="width: 9em;")
+						col(style="width: 4.5em;", span="2")
+						col(style="width: 10em;", span="4")
+					thead
 						tr
-							td.fett= __spell._zauber.Name
-							td(title=__spell._zauber.Probe.join(' · '))= __spell._zauber.Probe.map(function(item) { return Attribute[item].wert; }).join(' · ')
-							td.fett= __spell.ZfW
-							td= __spell._zauber.modifikation.typ
-							td= __spell._zauber.cast.ZD
-							td= __spell._zauber.cast.AsP
-							td= __spell._zauber.cast.WD
-							td= __spell._zauber.cast.RW
-						tr.meta
-							td
-								if Array.isArray(__spell.Spezialisierung) && __spell.Spezialisierung.length > 0
-									__spell.Spezialisierung.join(', ')
-							td(colspan="3")= __spell._zauber.SpoMod.join(', ')
-							td= __spell._zauber.Merkmale.join(', ')
-							td= __spell._zauber.Ziel.join(', ')
-							td= __spell.Repräsentation
-							td= __spell._zauber.Komplexität + " (" + __spell.Lernstufe + ")"
-						if Array.isArray(__spell._zauber.Varianten)
-							each __variant in __spell._zauber.Varianten.filter(function(item) { return (item.Repräsentationen.indexOf(__spell.Repräsentation) > -1) })
-								tr
-									td="- "+__variant.Name
-									td=__variant.modifikation.probe
-									td
-										if __variant.modifikation.minZfW
-											| (#{__variant.modifikation.minZfW})
-									td=__variant.modifikation.typ
-									td= __variant.cast.ZD
-									td= __variant.cast.AsP
-									td= __variant.cast.WD
-									td= __variant.cast.RW
-		script.
-			$('.zauber').on('click', 'tbody', function(evt) {
-				$(this).toggleClass('hide-rows');
-			});
+							th Zauber
+							th Probe
+							th ZfW
+							th Mod.
+							th ZD
+							th AsP
+							th WD
+							th RW
+						tr
+							th Spezialisierungen
+							th(colspan="3") Spontane Mod.
+							th Merkmale
+							th Ziel
+							th Repräsentation
+							th Komplexität
+					each __spell in Magie.Zauber
+						tbody.hide-rows
+							tr
+								td.fett= __spell._zauber.Name
+								td(title=__spell._zauber.Probe.join(' · '))= __spell._zauber.Probe.map(function(item) { return Attribute[item] ? Attribute[item].wert : item; }).join(' · ')
+								td.fett= __spell.ZfW
+								td= __spell._zauber.modifikation.typ
+								td= __spell._zauber.cast.ZD
+								td= __spell._zauber.cast.AsP
+								td= __spell._zauber.cast.WD
+								td= __spell._zauber.cast.RW
+							tr.meta
+								td
+									if Array.isArray(__spell.Spezialisierung) && __spell.Spezialisierung.length > 0
+										__spell.Spezialisierung.join(', ')
+								td(colspan="3")= __spell._zauber.SpoMod.join(', ')
+								td= __spell._zauber.Merkmale.join(', ')
+								td= __spell._zauber.Ziel.join(', ')
+								td= __spell.Repräsentation
+								td= __spell._zauber.Komplexität + " (" + __spell.Lernstufe + ")"
+							if Array.isArray(__spell._zauber.Varianten)
+								each __variant in __spell._zauber.Varianten.filter(function(item) { return (item.Repräsentationen.indexOf(__spell.Repräsentation) > -1) })
+									tr
+										td="- "+__variant.Name
+										td=__variant.modifikation.probe
+										td
+											if __variant.modifikation.minZfW
+												| (#{__variant.modifikation.minZfW})
+										td=__variant.modifikation.typ
+										td= __variant.cast.ZD
+										td= __variant.cast.AsP
+										td= __variant.cast.WD
+										td= __variant.cast.RW
+				script.
+					$('.zauber').on('click', 'tbody', function(evt) {
+						$(this).toggleClass('hide-rows');
+					});
