Starting with Miracles (DB entries).

--- a/views/system/nav.jade
+++ b/views/system/nav.jade
@@ -21,3 +21,7 @@ html(lang="de")
 				a(href="/zauber/neu") Neuer Zauberspruch
 			li
 				a(href="/variante/neu") Neue Zauber-Variante
+			li
+				a(href="/liturgie/liste") Übersicht der Liturgien
+			li
+				a(href="/liturgie/neu") Neue Liturgie
