--- a/views/system/table-of-talents.jade
+++ b/views/system/table-of-talents.jade
@@ -33,9 +33,9 @@ html
 				text-align: center;
 			}
 	body
-		section
+		header
 			a(href="/talent/neu") neues Talent
-		section
+		main
 			table
 				caption Liste der Talente
 				colgroup
