--- a/views/system/edit-liturgie.jade
+++ b/views/system/edit-liturgie.jade
@@ -1,7 +1,7 @@
 !!! 5
 html
 	head
-		title Neue Liturgie
+		title Liturgie [#{name}] bearbeiten
 		meta(charset="utf-8")
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
 		style.
